--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<!-- Main Nav -->
 			<nav class="main_nav">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li class="active"><a href="index1.html">Home</a></li>
+					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About us</a></li>
 					<li><a href="rooms.html">Rooms</a></li>
 					<!-- <li><a href="blog.html">News</a></li> -->
@@ -114,7 +114,7 @@
 			<!-- Menu Navigation -->
 			<nav class="menu_nav text-center">
 				<ul>
-					<li><a href="index1.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About us</a></li>
 					<li><a href="rooms.html">Rooms</a></li>
 					<!-- <li><a href="blog.html">Blog</a></li> -->
